--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,40 +1,53 @@
-.input{
-    display: flex;
-    width: 90%;
-    position: relative;
-    align-items: center;
+.input {
+  display: flex;
+  width: 90%;
+  position: relative;
+  align-items: center;
 }
 
-.input_box{
-    width: 100%;
-    border-radius: 50px;
-    padding: 20px 30px;
-    font-size: 25px;
-    border: none;
-    transition: 0.2s;
-    box-shadow: inset 0 0 5px black;
+.input_box {
+  width: 100%;
+  border-radius: 50px;
+  padding: 20px 30px;
+  font-size: 25px;
+  border: none;
+  transition: 0.2s;
+  box-shadow: inset 0 0 5px black;
 }
 
-.input_box:focus{
-    box-shadow: 0 0 10px 1000px rgb(58, 22, 22);
-    outline: none;
+.input_box:focus {
+  box-shadow: 0 0 10px 1000px rgb(58, 22, 22);
+  outline: none;
 }
 
-.input_submit{
-    position: absolute;
-    right: 10px;
-    color: white;
-    background-color: black;
-    font-size: medium;
-    border-radius: 50px;
-    padding: 15px 20px;
-    font-size: 20px;
-    border: none;
+.input_submit {
+  position: absolute;
+  right: 10px;
+  color: white;
+  background-color: black;
+  font-size: medium;
+  border-radius: 50px;
+  padding: 15px 20px;
+  font-size: 20px;
+  border: none;
 }
-.input_submit:hover{
-    background-color: rgb(73, 70, 70);
+.input_submit:hover {
+  background-color: rgb(73, 70, 70);
 }
-.input_submit:active{
-    transform: scale(0.8);
-    box-shadow: 0 0 5px black;
+.input_submit:active {
+  transform: scale(0.8);
+  box-shadow: 0 0 5px black;
+}
+
+.navbar {
+  display: flex;
+  border: 2px solid black;
+  color: white;
+  padding: 0.5rem;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 1.5rem;
+}
+.navbar > a {
+  color: white;
 }
